// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search filters options 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_0c7521\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_Column_665c14 _content_0c7521\\" style=\\"gap: var(--dodo-gap-0);\\">
      <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); min-height: 0;\\">
        <div class=\\"_Row_109a5d _searchbox_53a782\\">
          <div class=\\"_Field_342682 _TextInput_6615c1\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_342682\\"><input class=\\"_input_6615c1\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_6a6642\\" style=\\"\\">
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 2</span>
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Search input visible after character key press 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_0c7521\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_Column_665c14 _content_0c7521\\" style=\\"gap: var(--dodo-gap-0);\\">
      <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); min-height: 0;\\">
        <div class=\\"_Row_109a5d _searchbox_53a782\\" style=\\"\\">
          <div class=\\"_Field_342682 _TextInput_6615c1\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_342682\\"><input class=\\"_input_6615c1\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_6a6642\\" style=\\"\\"></div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Search input visible if many options 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_0c7521\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_Column_665c14 _content_0c7521\\" style=\\"gap: var(--dodo-gap-0);\\">
      <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); min-height: 0;\\">
        <div class=\\"_Row_109a5d _searchbox_53a782\\">
          <div class=\\"_Field_342682 _TextInput_6615c1\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_342682\\"><input class=\\"_input_6615c1\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_6a6642\\" style=\\"\\">
          <!--v-if-->
          <div data-selectactive=\\"true\\" class=\\"_DropdownItem_8d9fa1 _active_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 0</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 1</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 2</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 3</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 4</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 5</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 6</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 7</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 8</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 9</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 10</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 11</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 12</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 13</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 14</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 15</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 16</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 17</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 18</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_Column_665c14\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f _text_8d9fa1\\"><!-- @slot Customize option html -->Option 19</span>
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Select a value 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <!--v-if-->
</teleport-stub>"
`;

exports[`Select can be disabled 1`] = `
"<div class=\\"_trigger_0c7521 _disabled_0c7521\\">
  <div class=\\"_Field_342682 _disabled_342682 _button_342682\\">
    <div class=\\"_inner_342682\\"><span class=\\"_text_3c5a9f _span_3c5a9f _nowrap_3c5a9f\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\" disabled=\\"\\"></div><span class=\\"_Icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <!--v-if-->
</teleport-stub>"
`;
